# NearBuy

./: .editorconfig  .env.example  .gitignore  README.md  clear_database.py  debug_search.py  docker-compose.yml  fake_data_insert.py  gemini.md  main.py  output.txt  pyproject.toml  requirements.txt  reset_and_sync.py  seed_india_data.py  test_cities.py  test_quick_search.py  verify_data.py
app/api/v1/endpoints/: adminApi.py  analyticsApi.py  categoriesApi.py  inventory.py  inventoryApi.py  items.py  itemsApi.py  search.py  searchApi.py  shops.py  shopsApi.py  shopsListApi.py  status.py  statusApi.py  users.py  usersApi.py  vendorApi.py
app/core/: typesense_client.py
app/db/: queries.py  session.py
app/db/models/: inventory.py  item.py  shop.py  user.py
app/db/schemas/: inventory.py  item.py  shop.py  user.py
app/helpers/: fake_data_generator.py  geo.py  helpers.py  variables.py
app/tests/: test_inventory.py  test_items.py  test_search.py  test_shops.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/categories/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/items/: page.tsx
frontend/src/components/: BottomSheet.tsx  DistanceFilter.tsx  Hero.tsx  HowItWorks.tsx  LocationRequest.tsx  Map.tsx  MapModal.tsx  Navbar.tsx  ResultCard.tsx  SearchMap.tsx  SearchSuggestions.tsx  ShopCard.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/services/: api.ts
frontend/src/types/: auth.ts  index.ts
scripts/: create_admin.py  generate_fake_data_script.py
typesense_helper/: sync_db_to_typesense.py  typesense_client.py
typesense_utils/: sync_db_to_typesense.py
(+16 files in other folders)
