[project]
name = "nearbuy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==21.2.0",
    "bcrypt==4.3.0",
    "black>=25.1.0",
    "cffi==1.17.1",
    "click==8.2.1",
    "colorama==0.4.6",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi[all]==0.116.1",
    "geoalchemy2==0.17.1",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "httpx>=0.28.1",
    "idna==3.10",
    "numpy>=2.3.3",
    "packaging==25.0",
    "psycopg2-binary==2.9.10",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyotp==2.9.0",
    "pyqrcode==1.2.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv==1.1.1",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "shapely==2.1.1",
    "slowapi>=0.1.9",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "sqlmodel==0.0.24",
    "starlette==0.47.1",
    "typesense==1.1.1",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "ua-parser==1.0.1",
    "ua-parser-builtins==0.18.0.post1",
    "uvicorn==0.35.0",
]

[project.optional-dependencies]
dev = [
    "taskipy",
]

# Add this section to explicitly define your packages
[tool.setuptools.packages.find]
include = ["app*", "RDB*", "alembic*", "typesense_helper*"]

[tool.taskipy.tasks]
start = "python main.py"
test = "pytest"
migrate = "alembic upgrade head"
sync_typesense = "python typesense_helper/sync_db_to_typesense.py"
seed = "python fake_data_insert.py"